@@ -14,6 +14,15 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+lib/.collect-stamp, lib/smooth: Both of these are generated by make collect,
+  remove them from SVN. The latter file also showed up a lot in svn diff because
+  the locally generated copy no longer matched the svn version and no one
+  committed the change.
+lib/: Add those two removed files to svn:ignore.
+lib/Makefile.am: Update to match change, also add some other auto generated
+  files to MAINTAINERCLEANFILES.
+Arvid Norlander 2009-02-10
+
 include/living.h, include/player.h: Rearrange member order in some structs to
   reduce wasted space due to alignment.
 Arvid Norlander 2009-02-10
